# deepseek-http2

./: Cargo.toml  README.md  curl-h2c-http2-clear-text.sh  deepseek-chat-history.md  http2-upgrade-h2c-example.txt  test-nghttpd-no-tls.sh
src/: main.rs  main_001.rs  main_002.rs  main_003.rs  main_005.rs  main_006.rs  main_008.rs  main_hpack_001.rs
