[package]
name = "deepseek_http2"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main001"
path = "src/main_001.rs"

[[bin]]
name = "main002"
path = "src/main_002.rs"

[[bin]]
name = "main003"
path = "src/main_003.rs"

[[bin]]
name = "main_hpack"
path = "src/main_hpack_001.rs"

[[bin]]
name = "main_005"
path = "src/main_005.rs"

[dependencies]
hpack = "0.2.0"
